<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<data>
    <variable
        name="view"
        type="com.sbl.homework.week_06.userManagement.ui.RegisterFragment" />
</data>

<FrameLayout
android:id="@+id/registerView"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
tools:context="com.LoginFragment">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:gravity="top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/ic_back_btn"
            android:onClick="@{(v) ->view.onClick(v)}"
            android:padding="20dp" />

        <TextView
            android:id="@+id/register_appBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/TXT_SIGN_UP"
            android:textColor="@color/greenMoss"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="5dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/greyDeep"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="5dp"
        android:hint="@string/TXT_PASSWORD"
        android:inputType="textPassword"
        android:textColor="@color/greyDeep"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/check_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="5dp"
        android:hint="@string/TXT_CONFIRM_PASSWORD"
        android:inputType="textPassword"
        android:textColor="@color/greyDeep"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="5dp"
        android:hint="@string/TXT_NAME"
        android:inputType="text"
        android:textColor="@color/greyDeep"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/phone_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:drawableStart="@drawable/ic_phoneline"
        android:drawablePadding="5dp"
        android:hint="@string/TXT_PHONE_NUMBER"
        android:inputType="phone"
        android:textColor="@color/greyDeep"
        android:textSize="14sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/std_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/greenMoss"
            android:checked="@{view.userType.equals(`Student`)}"
            android:onClick="@{(v) -> view.onClick(v)}"
            android:text="@string/TXT_USERTYPE_STUDENT" />

        <RadioButton
            android:id="@+id/prof_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/greenMoss"
            android:checked="@{view.userType.equals(`Professor`)}"
            android:onClick="@{(v) -> view.onClick(v)}"
            android:text="@string/TXT_USERTYPE_PROFESSOR" />

        <RadioButton
            android:id="@+id/mpl_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/greenMoss"
            android:checked="@{view.userType.equals(`Employee`)}"
            android:onClick="@{(v) -> view.onClick(v)}"
            android:text="@string/TXT_USERTYPE_EMPLOYEE" />
    </RadioGroup>



    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="18dp"
        android:background="@drawable/round_button"
        android:onClick="@{(v) -> view.onClick(v)}"
        android:text="@string/TXT_SIGN_UP"
        android:textColor="@color/greyDeep"
        android:textStyle="bold"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/progress_circular"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone" />
</LinearLayout></FrameLayout>
</layout>