<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="view"
            type="com.sbl.homework.week_06.home.ui.HomeFragment" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/stoneWhite">

    <LinearLayout
        android:id="@+id/HomeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".home.ui.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/homeVector"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/baseline_home_filled"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:padding="5dp" />

            <TextView
                android:id="@+id/home_appbarTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/TXT_HOME"
                android:textColor="@color/greenLeaf"
                android:textSize="26sp"
                android:textStyle="bold"
                />

            <ImageButton
                android:id="@+id/refresh_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:background="@drawable/baseline_refresh"
                android:onClick="@{(v) -> view.onClick(v)}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/user_profilePicture"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_user">

            </ImageView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_profileName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/TXT_NAME"
                    android:textColor="@color/greenDeep"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/user_profileMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/TXT_PROFILE_MESSAGE"
                    android:textSize="12sp">

                </TextView>
            </LinearLayout>

            <ImageButton
                android:id="@+id/editButton"
                android:layout_width="0dp"
                android:layout_height= "match_parent"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@drawable/baseline_mode_edit"
                android:onClick="@{(v) -> view.onClick(v)}">
            </ImageButton>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/friend_count"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/TXT_FRIENDS"
                android:textColor="@color/greenDeep"
                android:textSize="14sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <ImageButton
        android:id="@+id/addFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/baseline_person_add"
        android:onClick="@{(v) -> view.onClick(v)}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeView"
        app:layout_constraintVertical_bias="1.0">

    </ImageButton>
</androidx.constraintlayout.widget.ConstraintLayout>


</layout>